--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,11 @@ google-genai==1.2.0
 groq==0.18.0
 yfinance==0.2.52
 phidata==2.7.10
+streamlit==1.42.0
+streamlit-modal==0.1.2
+crewai==0.102.0
+langchain==0.3.19
+langchain_experimental==0.3.4
+langchain_google_genai==2.0.9
+langchain-groq==0.2.4
+tabulate==0.9.0
