--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
-python-dotenv==0.21.0
+python-dotenv
 google-genai==1.2.0
 groq==0.18.0
-yfinance==0.2.52
+yfinance==0.2.54
 phidata==2.7.10
 streamlit==1.42.0
 streamlit-modal==0.1.2
 crewai==0.102.0
+crewai-tools==0.36.0
 langchain==0.3.19
 langchain_experimental==0.3.4
 langchain_google_genai==2.0.9
 langchain-groq==0.2.4
 tabulate==0.9.0
+googlesearch-python==1.3.0
+pycountry==24.6.1
+seaborn==0.13.2
+duckduckgo_search==7.5.0
+sec_api==1.0.29
+pydantic==2.9.0
